plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.6'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'by.vsu'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

ext {
    lombokVersion = '1.18.26'
    mysqlVersion = '8.0.32'
    mockitoVersion = '5.2.0'
    swaggerVersion = '3.0.0'
    jjwtVersion = '0.11.5'
}

repositories {
    mavenCentral()
}

dependencies {
    // spring
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-security"

    // jwt
    implementation "io.jsonwebtoken:jjwt-api:$jjwtVersion"
    implementation "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
    implementation "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"

    implementation "javax.xml.bind:jaxb-api:2.3.1"

    // mysql
    implementation "mysql:mysql-connector-java:$mysqlVersion"

    // lombok
    compileOnly "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok:$lombokVersion"

    // tests
    testImplementation "org.mockito:mockito-inline:$mockitoVersion"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
}

test {
    useJUnitPlatform()
}